--- a/src/styles/scss/components/_buttons.scss
+++ b/src/styles/scss/components/_buttons.scss
@@ -126,6 +126,7 @@
 
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
   vertical-align: middle;
   text-decoration: none;
